Fixed sidebar overflow

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1068,6 +1068,12 @@ video.qr-preview {
     display: block;
   }
 
+  .md table {
+    width: 100%;
+    table-layout: fixed;
+    overflow-wrap: break-word;
+  }
+
   .ref, .ext {
     .info, .actions, .advanced-actions * {
       font-size: 16px;
